# TriBITS

./: .codespellrc  .gitdist.default  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  ProjectName.cmake  README.DIRECTORY_CONTENTS.rst  README.md  README.rst  ReleaseNotes.txt  TPLsList.cmake  Version.cmake  project-checkin-test-config.py
.github/workflows/: deploy_docs.yml  dump_github_env_vars.yml  ghactions.yml  tribits_lint.yml  tribits_testing.yml
build_ref/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
build_ref/_sources/: index.rst.txt
build_ref/_static/: documentation_options.js
cmake/: AssertSameVersionFile.cmake  Dependencies.cmake
cmake/ctest/: CTestCustom.cmake.in  TribitsProjCTestDriver.cmake
common_tools/cloc/: README  cloc-core-langauges.sh  cloc-script-langauges.sh  cloc.pl  cloc.script-languages.in
common_tools/git/: cherry-pick-commits.py  commit-summary-over-periods.py  find_largest_git_files.sh  gitdist
common_tools/test/: hhmmss_math.py  kill-pstree.py  min_sec_math.py  monitor-disk-usage.sh
config_tests/: FortranMangling.cmake
ctest/: TribitsCTestDriverCore.cmake
ctest/tdd/: TribitsDriverCMakeLists.cmake  TribitsDriverDashboard.cmake  TribitsDriverSupport.cmake  tdd_driver.py
dev_testing/cee-rhel7/: checkin-test-cee-rhel7-cmake-3.17.1.sh  do-configure-mpi-debug  load-env.sh
dev_testing/cee-rhel8/: do-configure.mpi-debug  load-env.clang-16.0.6.sh  load-env.gnu-10.3.0.sh
dev_testing/crf450/: checkin-test-crf450-cmake-2.8.11.sh  checkin-test-crf450-cmake-3.11.1.sh  checkin-test-crf450-cmake-3.17.0-python-3.5.2.sh  checkin-test-crf450-cmake-3.17.0.sh  checkin-test-crf450-cmake-3.6.2.sh  checkin-test-crf450-do-all-push.sh  checkin-test-crf450.sh  load-env-python-2.7.5.sh  load-env-python-3.5.2.sh  load-env.sh
dev_testing/fissile4/: checkin-test-fissile4.sh
dev_testing/generic/: do-configure-mpi-debug  do-configure-serial-debug-gcc
dev_testing/sems/: checkin-test-sems.sh  load_serial_dev_env.sh
doc/: TribitsBuildQuickRefBody.rst  build_docs  index.html  index.rst
doc/build_quick_ref/: TribitsBuildQuickRef.html  TribitsBuildQuickRef.rst  TribitsBuildQuickRefBody.rst
doc/developers_guide/: TribitsDevelopersGuide.html  TribitsDevelopersGuide.rst  TribitsMacroFunctionDoc.rst  TribitsMacroFunctionDocTemplate.rst  UtilsMacroFunctionDoc.rst
doc/lifecycle_model/: rab_commands.tex
doc/overview/: .gitignore  Makefile  TribitsOverview.tex  rab_commands.tex  references.bib
doc/poster/: TriBITS_Poster_Slides.pptx
installation/: TribitsPackageConfigTemplate.cmake.in  TribitsProjectConfigTemplate.cmake.in
maintainers_guide/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
maintainers_guide/_sources/: index.rst.txt
maintainers_guide/_static/: documentation_options.js
package_arch/: TribitsAddAdvancedTest.cmake  TribitsAddExecutable.cmake  TribitsAddExecutableTestHelpers.cmake  TribitsAddTest.cmake  TribitsAddTestHelpers.cmake  TribitsAdjustPackageEnables.cmake  TribitsFindMostRecentFileTimestamp.cmake  TribitsGlobalMacros.cmake  TribitsLibraryMacros.cmake  TribitsPackageMacros.cmake  TribitsProcessEnabledTpl.cmake  TribitsProcessPackagesAndDirsLists.cmake  TribitsTplDeclareLibraries.cmake  TribitsTplFindIncludeDirsAndLibraries.cmake  TribitsWriteClientExportFiles.cmake
package_arch/UnitTests/: CMakeLists.txt  TestingFunctionMacro_UnitTests.cmake  TribitsAdjustPackageEnablesHelpers.cmake  TribitsAdjustPackageEnables_UnitTests.cmake  TribitsWriteClientExportFiles_UnitTests.cmake
python/: CheckinTest.py  CheckinTest_UnitTests.py  GeneralScriptSupport.py  gitdist_UnitTests.py  mockprogram.py  mockprogram_UnitTests.py
refactoring/: remove_std_tribits_includes.py  remove_std_tribits_includes_r.sh  replace_include_directories_r.sh  replace_set_and_inc_dirs_r.sh  string-replace.py  token-replace.py
test/: CMakeLists.txt
test/ci_support/: CDashAnalyzeReportRandomFailures_UnitTests.py  CDashQueryAnalizeReport_UnitTests.py  CDashQueryAnalyzeReportUnitTestHelpers.py  CDashQueryAnalyzeReport_UnitTests.py  CDashQueryPassFail_UnitTests.py  CDashSubprojectDependencies.gold.xml  CMakeCache.large.clean.txt.expected  CMakeCache.large.txt  CMakeCache.small.clean.txt.expected  CMakeCache.small.txt  CMakeLists.txt  CheckinTest_UnitTests.py  CreateIssueTrackerFromCDashQuery_UnitTests.py  ExtraReposList.cmake  ExtraReposListExisting_4.cmake  FindCISupportDir.py  TribitsDependencies_UnitTests.py  TribitsExampleProject_ProjectCiFileChangeLogic_UnitTests.py  TribitsPackageFilePathUtils_UnitTests.py  TribitsStripCommentsFromCMakeCacheFile_TestDriver.cmake  TrilinosPackageDependencies.extraRepoOnePackage.gold.xml  TrilinosPackageDependencies.gold.xml  TrilinosPackageDependencies.preCopyrightTrilinos.extraTrilinosRepo.gold.xml  TrilinosPackageDependencies.preRepoOnePackage.preCopyrightTrilinos.gold.xml  analyze_and_report_cdash_results_UnitTests.py  cdash_analyze_and_report_UnitTests.py  cdash_analyze_and_report_random_failures_UnitTests.py  (+11 more)
test/ctest_driver/: CMakeLists.txt  CTestDriverUnitTests.cmake  unit_test_driver.cmake
test/ctest_driver/MockCTestDriver/: CMakeLists.txt  TrilinosPackageDependencies.Continuous.xml  unit_test_driver.cmake
test/ctest_driver/TribitsExampleMetaProject/: CMakeLists.txt
test/ctest_driver/TribitsExampleMetaProject/data/: TribitsExMetaProjRepoVersion.for-testing.txt  TribitsExMetaProjRepoVersion.for-testing.with-parents.txt  TribitsExMetaProj_version_date.for-testing.h  VersionDate.TribitsExMetaProj.cmake
test/ctest_driver/TribitsExampleProject/: CMakeLists.txt
test/ctest_driver/data/dummy_build_dir/Testing/: TAG
tpls/: FindTPLPETSC.cmake
tribits/: CHANGELOG.md  FindTriBITS.cmake  ReleaseNotes.txt  TriBITSConfig.cmake
tribits/examples/TribitsExampleApp/: AppHelperFuncs.cmake  CMakeLists.txt  README.md  app.cpp
users_guide/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
utils/: DriveAdvancedTest.cmake  TimingUtils.cmake  UnitTestHelpers.cmake
(+407 files in other folders)
